Fixed Auth, routes are protected

--- a/FinanceTrackerApp/Components/Pages/Transactions.razor
+++ b/FinanceTrackerApp/Components/Pages/Transactions.razor
@@ -24,7 +24,9 @@
     </div>
 
     <div class="filters glass">
-        <input class="input"               placeholder="Search transactions..."               @bind="searchTerm" />
+        <input class="input"               
+            placeholder="Search transactions..."               
+            @bind="searchTerm" />
 
         <select class="input" @bind="selectedType">
             <option value="">All Types</option>
