--- a/FinanceTrackerApp/Components/App.razor
+++ b/FinanceTrackerApp/Components/App.razor
@@ -16,7 +16,12 @@
 
 <body>
     <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+    <script src="_content/Blazor-ApexCharts/js/apexcharts.min.js"></script>
+    <script src="_content/Blazor-ApexCharts/js/blazor-apexcharts.js"></script>
+    <script src="js/analytics-export.js"></script>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
 </html>
+
+
